fixed wrapping issue

--- a/src/client/quoridor_site/quoridor_site_backend/static/css/styles.css
+++ b/src/client/quoridor_site/quoridor_site_backend/static/css/styles.css
@@ -1,6 +1,6 @@
 h1 {
     padding-bottom: 20px;
-    font-size: 100px;
+    font-size: 500%;
     text-align: center;
     font-family: Garamond;
     color: #4b0b0b;
